--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,37 +1,56 @@
-.cardpio2,
-.home2 {
+@keyframes scale-up {
+  0% {
+    transform: scale(0.5);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+.cardpio8,
+.home8 {
   position: absolute;
   top: 48px;
   left: 904px;
   display: inline-block;
   width: 126.67px;
 }
-.cardpio2 {
+.cardpio8 {
   left: 1089.33px;
   width: 213.33px;
   cursor: pointer;
 }
-.header-item,
-.rea-do-cliente1 {
-  position: absolute;
-  top: 30.67px;
-  left: 1468px;
-  width: 414.67px;
-  height: 93.33px;
-}
-.header-item {
+.group-child77 {
+  top: 0;
+  left: 0;
   border-radius: 66.67px;
   background-color: var(--color-white);
 }
-.rea-do-cliente1 {
+.group-child77,
+.rea-do-cliente7,
+.rectangle-parent32 {
+  position: absolute;
+  width: 414.67px;
+  height: 93.33px;
+}
+.rea-do-cliente7 {
+  top: 0;
+  left: 0;
   font-weight: 500;
-  color: var(--color-gray);
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.vecteezy-restaurant-logo-food-icon7,
-.vector-icon4 {
+.rectangle-parent32 {
+  top: 30.67px;
+  left: 1468px;
+  color: var(--color-gray);
+}
+.rectangle-parent32:hover {
+  animation: 1s ease 0s infinite normal none scale-up;
+  opacity: 1;
+}
+.vecteezy-restaurant-logo-food-icon19,
+.vector-icon41 {
   position: absolute;
   height: 69.23%;
   width: 4.44%;
@@ -43,15 +62,16 @@
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon4 {
+.vector-icon41 {
   height: 30.77%;
   width: 2.5%;
   top: 35.04%;
   right: 26.6%;
   bottom: 34.19%;
   left: 70.9%;
+  cursor: pointer;
 }
-.header1 {
+.header7 {
   position: absolute;
   top: 0;
   left: 0;
