--- a/src/pages/Cardpio.css
+++ b/src/pages/Cardpio.css
@@ -1,4 +1,4 @@
-.fluentbox-24-filled1 {
+.fluentbox-24-filled6 {
   position: absolute;
   top: 660px;
   left: 44px;
@@ -6,7 +6,7 @@
   height: 24px;
   overflow: hidden;
 }
-.vecteezy-restaurant-logo-food-icon3 {
+.vecteezy-restaurant-logo-food-icon13 {
   position: absolute;
   height: 46.57%;
   width: 6.81%;
@@ -18,13 +18,13 @@
   overflow: hidden;
   max-height: 100%;
 }
-.fast-grill-,
-.todos-os-direitos {
+.fast-grill-5,
+.todos-os-direitos5 {
   position: absolute;
   top: 242.67px;
   left: 789.33px;
 }
-.todos-os-direitos {
+.todos-os-direitos5 {
   top: 306.67px;
   font-size: 18.67px;
 }
@@ -34,7 +34,7 @@
   width: 1920px;
   height: 369.33px;
 }
-.footer1 {
+.footer6 {
   position: absolute;
   top: 3875.33px;
   left: 0;
@@ -43,10 +43,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-  text-align: center;
   font-size: 42.67px;
 }
-.cardpio-child {
+.cardpio-child,
+.group-child34 {
   position: absolute;
   top: 304px;
   left: 105px;
@@ -54,15 +54,52 @@
   width: 117px;
   height: 113px;
 }
-.cardpio-item {
+.group-child34 {
+  top: 0;
+  left: 0;
+  border-radius: var(--br-3xs);
+  background-color: var(--color-darkorange);
+  width: 289px;
+  height: 61px;
+}
+.vector-icon33 {
+  position: absolute;
+  top: 14px;
+  left: 14px;
+  width: 37px;
+  height: 33px;
+}
+.ver-outras-unidades {
+  position: absolute;
+  top: 0;
+  left: 51px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 238px;
+  height: 61px;
+}
+.rectangle-parent18 {
+  position: absolute;
+  top: 141px;
+  left: 1579px;
+  width: 289px;
+  height: 61px;
+  cursor: pointer;
+}
+.cardpio-inner {
   position: absolute;
   top: 156px;
   left: 0;
   width: 1920px;
   height: 342px;
-  object-fit: cover;
+  background-image: url(/public/frame-28@2x.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: top;
+  font-size: var(--font-size-xl);
 }
-.vecteezy-restaurant-logo-food-icon4 {
+.vecteezy-restaurant-logo-food-icon14 {
   position: absolute;
   top: 260px;
   left: 107px;
@@ -71,39 +108,42 @@
   height: 132px;
   object-fit: cover;
 }
-.cardpio1,
-.home1 {
+.cardpio6,
+.home5 {
   position: absolute;
   top: 48px;
-  left: 904px;
   display: inline-block;
-  width: 126.67px;
 }
-.cardpio1 {
+.home5 {
+  left: 904px;
+  width: 126.67px;
+  cursor: pointer;
+}
+.cardpio6 {
   left: 1089.33px;
   width: 213.33px;
 }
-.header-child,
-.rea-do-cliente {
+.header-child8,
+.rea-do-cliente5 {
   position: absolute;
   top: 30.67px;
   left: 1468px;
   width: 414.67px;
   height: 93.33px;
 }
-.header-child {
+.header-child8 {
   border-radius: 66.67px;
   background-color: var(--color-white);
 }
-.rea-do-cliente {
+.rea-do-cliente5 {
   font-weight: 500;
   color: var(--color-gray);
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.vecteezy-restaurant-logo-food-icon5,
-.vector-icon {
+.vecteezy-restaurant-logo-food-icon15,
+.vector-icon34 {
   position: absolute;
   height: 69.23%;
   width: 4.44%;
@@ -115,29 +155,29 @@
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon {
+.vector-icon34 {
   height: 30.77%;
   width: 2.5%;
   top: 35.04%;
   right: 26.6%;
   bottom: 34.19%;
   left: 70.9%;
+  cursor: pointer;
 }
-.cardpio-inner,
-.header {
+.cardpio-item,
+.header5 {
   position: absolute;
   left: 0;
   width: 1920px;
 }
-.header {
+.header5 {
   top: 0;
   background-color: var(--color-darkorange);
   box-shadow: 0 5.333333492279053px 66.67px 13.33px rgba(0, 0, 0, 0.2);
   height: 156px;
-  text-align: center;
   font-size: var(--font-size-21xl);
 }
-.cardpio-inner {
+.cardpio-item {
   top: 498px;
   background-color: var(--color-white);
   height: 112px;
@@ -148,34 +188,39 @@
   top: 263px;
   left: 266px;
   display: inline-block;
+  text-align: left;
   width: 769.33px;
 }
 .sgan-609-mdulo1 {
   top: 311px;
   width: 901px;
 }
-.pedidos-na-sua-container,
-.tempo-mdio-de-container {
-  position: absolute;
+.pedidos-na-sua-container {
   top: 530px;
   left: 192px;
   color: var(--color-black);
-  display: inline-block;
   width: 494px;
 }
+.aberto-at-as1,
+.pedidos-na-sua-container,
 .tempo-mdio-de-container {
+  position: absolute;
+  display: inline-block;
+  text-align: left;
+}
+.tempo-mdio-de-container {
+  top: 530px;
   left: 816px;
+  color: var(--color-black);
   width: 593px;
 }
 .aberto-at-as1 {
-  position: absolute;
   top: 356px;
   left: 292px;
   font-size: var(--font-size-5xl);
-  display: inline-block;
   width: 901px;
 }
-.ellipse-div {
+.cardpio-child1 {
   position: absolute;
   top: 365px;
   left: 266px;
@@ -183,41 +228,6 @@
   background-color: var(--color-limegreen);
   width: 18px;
   height: 18px;
-}
-.ver-outras-unidades {
-  position: relative;
-  display: inline-block;
-  width: 211px;
-}
-.ver-outras-unidades-wrapper {
-  border-radius: var(--br-3xs);
-  background-color: var(--color-darkorange);
-  width: 289px;
-  height: 61px;
-  display: flex;
-  flex-direction: column;
-  padding: 0 15px;
-  box-sizing: border-box;
-  align-items: flex-end;
-  justify-content: center;
-}
-.vector-icon1 {
-  position: relative;
-  width: 37px;
-  height: 33px;
-  margin-left: -273px;
-}
-.frame-group {
-  position: absolute;
-  top: 295px;
-  left: 1594px;
-  width: 289px;
-  height: 61px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-  font-size: var(--font-size-xl);
 }
 .categorias {
   position: relative;
@@ -244,6 +254,7 @@
   flex-direction: column;
   justify-content: flex-start;
   gap: 4px;
+  text-align: left;
   color: var(--color-darkslategray-200);
 }
 .frame-inner,
@@ -293,14 +304,14 @@
   width: 330.85px;
 }
 .adicionar-ao-carrinho,
-.rectangle-div {
+.frame-child1 {
   position: absolute;
   top: 262.3px;
   left: 18.1px;
   width: 317.44px;
   height: 50.97px;
 }
-.rectangle-div {
+.frame-child1 {
   border-radius: 44.71px;
   background-color: var(--color-darkorange);
 }
@@ -315,7 +326,7 @@
 .span {
   color: var(--color-gray-100);
 }
-.r-1990 {
+.r-19901 {
   color: var(--color-darkslategray-100);
 }
 .a-partir-de-container1 {
@@ -347,7 +358,7 @@
   font-weight: 600;
 }
 .esse-t-no1,
-.frame-child1,
+.frame-child2,
 .peito-de-frango1 {
   position: absolute;
   left: 16.1px;
@@ -359,7 +370,7 @@
   display: inline-block;
   width: 330.85px;
 }
-.frame-child1 {
+.frame-child2 {
   top: 200.3px;
   border-radius: 44.71px;
   background-color: var(--color-darkorange);
@@ -398,13 +409,13 @@
   width: 561.56px;
   height: 262px;
 }
-.frame-child2,
+.frame-child3,
 .image-11-icon1,
 .image-12-parent {
   position: absolute;
   border-radius: 17.88px;
 }
-.frame-child2 {
+.frame-child3 {
   top: 343px;
   left: 0;
   background-color: var(--color-white);
@@ -437,14 +448,14 @@
   width: 330.85px;
 }
 .adicionar-ao-carrinho2,
-.frame-child3 {
+.frame-child4 {
   position: absolute;
   top: 543.3px;
   left: 16.1px;
   width: 317.44px;
   height: 50.97px;
 }
-.frame-child3 {
+.frame-child4 {
   border-radius: 44.71px;
   background-color: var(--color-darkorange);
 }
@@ -500,17 +511,16 @@
   left: 1164.46px;
 }
 .frame-div,
-.rectangle-container {
+.rectangle-parent19 {
   position: absolute;
   top: 1227px;
   left: 105px;
   width: 1726.01px;
   height: 605px;
-  text-align: center;
   font-size: var(--font-size-base-1);
   color: var(--color-black);
 }
-.frame-div {
+.rectangle-parent19 {
   top: 3177px;
 }
 .image-12-parent6 {
@@ -522,13 +532,13 @@
   width: 561.56px;
   height: 262px;
 }
-.frame-child20,
+.frame-child21,
 .image-12-icon9,
 .image-12-parent6 {
   position: absolute;
   border-radius: 17.88px;
 }
-.frame-child20 {
+.frame-child21 {
   top: 624px;
   left: 2px;
   background-color: var(--color-white);
@@ -561,14 +571,14 @@
   width: 330.85px;
 }
 .adicionar-ao-carrinho15,
-.frame-child21 {
+.frame-child22 {
   position: absolute;
   top: 824.3px;
   left: 18.1px;
   width: 317.44px;
   height: 50.97px;
 }
-.frame-child21 {
+.frame-child22 {
   border-radius: 44.71px;
   background-color: var(--color-darkorange);
 }
@@ -631,22 +641,21 @@
   width: 561.56px;
   height: 262px;
 }
-.rectangle-parent1 {
+.rectangle-parent20 {
   position: absolute;
   top: 1877px;
   left: 107px;
   width: 1726.01px;
   height: 886px;
-  text-align: center;
   font-size: var(--font-size-base-1);
   color: var(--color-black);
 }
-.frame-child25,
+.frame-child26,
 .image-11-icon6 {
   position: absolute;
   border-radius: 17.88px;
 }
-.frame-child25 {
+.frame-child26 {
   top: 62px;
   left: 0;
   background-color: var(--color-white);
@@ -688,14 +697,14 @@
   width: 330.85px;
 }
 .adicionar-ao-carrinho19,
-.frame-child26 {
+.frame-child27 {
   position: absolute;
   top: 262.3px;
   left: 16.1px;
   width: 317.44px;
   height: 50.97px;
 }
-.frame-child26 {
+.frame-child27 {
   border-radius: 44.71px;
   background-color: var(--color-darkorange);
 }
@@ -728,18 +737,17 @@
   width: 561.56px;
   height: 262px;
 }
-.rectangle-parent2 {
+.rectangle-parent21 {
   position: absolute;
   top: 2808px;
   left: 111px;
   width: 1142.78px;
   height: 324px;
-  text-align: center;
   font-size: var(--font-size-base-1);
   color: var(--color-black);
 }
-.vector-icon2,
-.vector-icon3 {
+.vector-icon35,
+.vector-icon36 {
   position: absolute;
   height: 1.46%;
   width: 3.33%;
@@ -751,7 +759,7 @@
   overflow: hidden;
   max-height: 100%;
 }
-.vector-icon3 {
+.vector-icon36 {
   height: 1.37%;
   width: 3.02%;
   top: 12.38%;
@@ -759,8 +767,8 @@
   bottom: 86.25%;
   left: 38.39%;
 }
-.group-icon,
-.solarstar-bold-duotone1 {
+.group-icon3,
+.solarstar-bold-duotone6 {
   position: absolute;
   top: 249px;
   left: 1724.01px;
@@ -768,7 +776,7 @@
   height: 24px;
   overflow: hidden;
 }
-.group-icon {
+.group-icon3 {
   height: 10.43%;
   width: 2.23%;
   top: 0.53%;
@@ -796,14 +804,14 @@
   width: 330.85px;
 }
 .adicionar-ao-carrinho21,
-.frame-child28 {
+.frame-child29 {
   position: absolute;
   top: 200.3px;
   left: 16.1px;
   width: 317.44px;
   height: 50.97px;
 }
-.frame-child28 {
+.frame-child29 {
   border-radius: 44.71px;
   background-color: var(--color-white);
 }
@@ -815,7 +823,7 @@
   align-items: center;
   justify-content: center;
 }
-.r-199021 {
+.r-199022 {
   color: var(--color-white);
 }
 .a-partir-de-container42 {
@@ -864,16 +872,17 @@
   left: 109px;
   width: 1748.01px;
   height: 374px;
+  text-align: left;
   font-size: var(--font-size-5xl);
   color: var(--color-dimgray-200);
 }
-.cardpio {
+.cardpio5 {
   position: relative;
   background-color: var(--color-whitesmoke-100);
   width: 100%;
   height: 4241px;
   overflow: hidden;
-  text-align: left;
+  text-align: center;
   font-size: var(--font-size-13xl);
   color: var(--color-white);
   font-family: var(--font-poppins);
