--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,11 @@
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .home-child {
   position: absolute;
   top: 0;
@@ -5,25 +13,15 @@
   width: 1999.73px;
   height: 1349.09px;
 }
-.home-item,
 .pedidos-direto-da {
   position: absolute;
-  left: 149.33px;
-}
-.pedidos-direto-da {
   top: 464px;
+  left: 149.33px;
   font-size: var(--font-size-61xl);
   font-weight: 500;
   color: var(--color-darkslategray);
   display: inline-block;
   width: 769.33px;
-}
-.home-item {
-  top: 972px;
-  border-radius: 66.67px;
-  background-color: var(--color-darkorange);
-  width: 273.33px;
-  height: 100px;
 }
 .idp {
   font-family: var(--font-poppins);
@@ -39,26 +37,11 @@
   width: 754.67px;
   height: 205.33px;
 }
-.fazer-pedido,
-.fazer-pedido-wrapper {
+.home-item {
   position: absolute;
-  width: 273.33px;
-  height: 100px;
-}
-.fazer-pedido {
-  top: 0;
-  left: 0;
-  font-weight: 600;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.fazer-pedido-wrapper {
   top: 972px;
   left: 149.33px;
   cursor: pointer;
-  text-align: center;
-  color: var(--color-white);
 }
 .image-1-icon {
   position: absolute;
@@ -67,6 +50,10 @@
   width: 964px;
   height: 964px;
   object-fit: cover;
+  opacity: 0;
+}
+.image-1-icon.animate {
+  animation: 1s ease 0s 1 normal forwards fade-in;
 }
 .fure-filas-desnecessrias,
 .realizando-o-pedido {
@@ -86,15 +73,15 @@
   width: 677.33px;
   height: 184px;
 }
-.group-child {
+.group-child35 {
   top: 0;
   left: 0;
   border-radius: 66.67px;
   background-color: var(--color-darkorange);
 }
 .fazer-o-meu,
-.group-child,
-.rectangle-parent {
+.group-child35,
+.rectangle-parent22 {
   position: absolute;
   width: 476px;
   height: 100px;
@@ -107,10 +94,9 @@
   align-items: center;
   justify-content: center;
 }
-.rectangle-parent {
+.rectangle-parent22 {
   top: 2973.33px;
   left: 858.67px;
-  cursor: pointer;
   text-align: center;
   color: var(--color-white);
 }
@@ -213,7 +199,7 @@
   height: 861.33px;
   object-fit: cover;
 }
-.home {
+.home6 {
   position: relative;
   background-color: var(--color-white);
   width: 100%;
